<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_navigation_menu_home"/>
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/bottom_navigation_menu_search"/>
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_star_rate_24"
        android:title="@string/bottom_navigation_menu_favorites"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/bottom_navigation_menu_settings"/>
</menu>